# iex-ai-energy-manager

./: .env.example  .gitignore  Dockerfile  HANDOFF_README.md  README.md  demo_7d_forecast_june7_14_v2.csv  docker-compose.yml  fcast.json  pyproject.toml  requirements.txt  test_weather.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: model_params.json
demo/: demo_7d_block_avg_forecast_v2.csv  demo_7d_rtm_forecast_v3.csv
docs/: api_examples.md  backend_handoff.md  deployment_guide.md  final_benchmark_report.md  frontend_contract.md  production_readiness_report.md  system_architecture.md
forecasts/archive/: 2026_06_04_24h.csv
models/baseline/: catboost.pkl  ensemble.pkl
models/direct/: direct_h12.pkl  direct_h192.pkl  direct_h24.pkl  direct_h2880.pkl  direct_h48.pkl  direct_h60.pkl  direct_h672.pkl  direct_h68.pkl  direct_h72.pkl  direct_h76.pkl  direct_h78.pkl  (+7 more)
scratch/: test_optimizer.py  validate_7d.py  zip_handoff.py
scripts/: build_features.py  build_rtm_master.py  compare_spike_boost.py  e2e_validation.py  fetch_weather.py  generate_rtm_forecast.py  ingest_raw.py  load_rtm_data.py  run_training_pipeline.py  scrape_grid_india.py  test_control_loop.py  train_catboost.py  train_ensemble.py  train_lightgbm.py  train_models.py  train_spike_classifier.py  train_xgboost.py  tune_models.py  validate_rtm_forecast.py
tests/: conftest.py  test_build_features.py  test_cleaner.py  test_data_ingestion.py  test_ensemble.py  test_features.py  test_recursive_forecast.py  test_spike_classifier.py  test_train_lightgbm.py  test_train_xgboost.py
(+70 files in other folders)
