[project]
name = "iex-rtm-forecast"
version = "1.0.0"
description = "IEX RTM electricity price (MCP) forecasting system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "src/iex_forecast"]

[tool.mypy]
python_version = "3.11"
packages = ["iex_forecast"]
ignore_missing_imports = true
